tests/miniJava/neg/000208_mutation.MiniJava
class java { public static this Main ( String [ ] java ) { { } } }
